--- a/website/flaming.html
+++ b/website/flaming.html
@@ -56,7 +56,7 @@
                         <li class="nav-item dropdown">
                             <a
                                 class="nav-link dropdown-toggle"
-                                href="#"
+                                href=""
                                 role="button"
                                 data-bs-toggle="dropdown"
                                 aria-expanded="false"
@@ -100,5 +100,10 @@
                 </div>
             </div>
         </nav>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
