--- a/website/index.html
+++ b/website/index.html
@@ -16,7 +16,7 @@
     <body>
         <nav id="navigation-bar" class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand text-white" href="#"
+                <a class="navbar-brand text-white" href="index.html"
                     >Project Heartcode</a
                 >
                 <button
@@ -105,6 +105,23 @@
             This is the website for Project Heartcode 2023. This website is
             currently under construction.
         </p>
+        <div
+            id="carousel-component"
+            class="carousel slide"
+            data-bs-ride="carousel"
+        >
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="..." class="d-block w-100" alt="..." />
+                </div>
+                <div class="carousel-item active">
+                    <img src="..." class="d-block w-100" alt="..." />
+                </div>
+                <div class="carousel-item active">
+                    <img src="..." class="d-block w-100" alt="..." />
+                </div>
+            </div>
+        </div>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
