--- a/website/mentee2.html
+++ b/website/mentee2.html
@@ -16,7 +16,7 @@
     <body>
         <nav id="navigation-bar" class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand text-white" href="#"
+                <a class="navbar-brand text-white" href="index.html"
                     >Project Heartcode</a
                 >
                 <button
