--- a/website/harassment.html
+++ b/website/harassment.html
@@ -1,104 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Project Heartcode 2023</title>
-        <link rel="icon" href="../assets/heartcode.png" />
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-            crossorigin="anonymous"
-        />
-        <link href="styles.css" rel="stylesheet" />
-    </head>
-    <body>
-        <nav id="navigation-bar" class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand text-white" href="#"
-                    >Project Heartcode</a
-                >
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div
-                    class="collapse navbar-collapse"
-                    id="navbarSupportedContent"
-                >
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a
-                                class="nav-link active"
-                                aria-current="page"
-                                href="index.html"
-                                >Home</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="flaming.html"
-                                >Flaming</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="harassment.html"
-                                >Harassment</a
-                            >
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a
-                                class="nav-link dropdown-toggle"
-                                href="#"
-                                role="button"
-                                data-bs-toggle="dropdown"
-                                aria-expanded="false"
-                            >
-                                About Us
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a class="dropdown-item" href="mentee1.html"
-                                        >Cayden</a
-                                    >
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="mentee2.html"
-                                        >Zi Rong</a
-                                    >
-                                </li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li>
-                                    <a class="dropdown-item" href="mentors.html"
-                                        >About the mentors</a
-                                    >
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <input
-                            class="form-control me-2"
-                            type="search"
-                            placeholder="Search"
-                            aria-label="Search"
-                        />
-                        <button
-                            class="btn btn-outline text-white"
-                            type="submit"
-                        >
-                            Search
-                        </button>
-                    </form>
-                </div>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Project Heartcode 2023</title>
+    <link rel="icon" href="../assets/heartcode.png" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+    <link href="styles.css" rel="stylesheet" />
+    <style>
+        ul {
+            font-size: 22px;
+        }
+
+        .meh {
+            font-size: 22px;
+        }
+
+        .meh2 {
+            align-items: center;
+            display: flex;
+            justify-content: center;
+        }
+        .meh3{
+            align-items: center;
+            display: flex;
+            justify-content: center;
+        }
+    </style>
+</head>
+
+<body>
+    <nav id="navigation-bar" class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand text-white" href="#">Project Heartcode</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="flaming.html">Flaming</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="harassment.html">Harassment</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            About Us
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="mentee1.html">Cayden</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="mentee2.html">Zi Rong</a>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider" />
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="mentors.html">About the mentors</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                    <button class="btn btn-outline text-white" type="submit">
+                        Search
+                    </button>
+                </form>
             </div>
-        </nav>
-    </body>
+        </div>
+    </nav>
+    <h1>HARASSMENT</h1>
+    <h2>Harassment covers a wide range of behaviors of offensive nature. It is commonly understood as behavior that
+        demeans, humiliates, and intimidates a person
+        <h2>
+            <br>
+            <p class="meh">What is online harassment?
+                Harassment in the context of cyberbullying refers to the use of electronic communication, such as the
+                internet and social media platforms, to repeatedly intimidate, threaten, or belittle individuals.
+                Cyberbullying can take various forms, including sending hurtful messages, spreading rumors, sharing
+                private information, creating fake profiles, or engaging in any other online behavior with the intent to
+                harm someone emotionally or psychologically.
+            </p>
+            <div class="meh2">
+                </divclass><iframe width="560" height="315"
+                    src="https://www.youtube.com/embed/u7e2c6v1oDs?si=uo0JjqmHlAvOz3P1" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe></div>
+            <hr>
+            <ul>
+                <li>
+                    spreading rumours, ridiculing, and/or demeaning others
+                </li>
+                <li>
+                    harassing others because of their race, religion, sexual orientation, disability or transgender
+                    identity
+                    seeking revenge or deliberately embarrassing a person online
+                </li>
+                <li>
+                    engaging in unwanted behaviour of a sexual nature via text, email or other electronic and/or social
+                    media including using intimate images or recordings of another person
+                    impersonating others, even through their own accounts, with malicious intent
+                </li>
+                <li>
+                    sending inflammatory, inappropriate, rude and/or violent messages or comments about someone to
+                    provoke responses from other users
+                    exposing others to unwanted or offensive content in digital groups or meetings
+                </li>
+            </ul>
+            <a class="meh3" href="https://www.police.gov.sg/media-room/news/20231017_man_to_be_charged_for_involvement_in_series_of_harassment_cases">in emergency,report police</a>
+
+</body>
+
 </html>
