--- a/website/harassment.html
+++ b/website/harassment.html
@@ -81,7 +81,7 @@
             </div>
         </div>
     </nav>
-    <h1>HARASSMENT</h1>
+    <h1  class="fw-bold" >HARASSMENT</h1>
     <h2>Harassment covers a wide range of behaviors of offensive nature. It is commonly understood as behavior that
         demeans, humiliates, and intimidates a person
         <h2>
