--- a/website/index.html
+++ b/website/index.html
@@ -100,25 +100,31 @@
                 </div>
             </div>
         </nav>
-        <h1>Project Heartcode 2023</h1>
-        <p>
-            This is the website for Project Heartcode 2023. This website is
-            currently under construction.
-        </p>
+        <div style="margin: 10px">
+            <img src="../assets/heartcode.png" style="width: 300px" />
+            <h1>Project Heartcode 2023</h1>
+            <p>
+                This is the website for Project Heartcode 2023. This website is
+                currently under construction.
+            </p>
+        </div>
         <div
             id="carousel-component"
-            class="carousel slide"
+            class="carousel slide m-4"
             data-bs-ride="carousel"
         >
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="..." />
+                <div
+                    class="carousel-item active rounded-pill"
+                    data-bs-interval="2000"
+                >
+                    <img src="../assets/image2.jpg" class="" alt="..." />
                 </div>
-                <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="..." />
-                </div>
-                <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="..." />
+                <div
+                    class="carousel-item active rounded-pill"
+                    data-bs-interval="2000"
+                >
+                    <img src="../assets/image3.jpg" class="" alt="..." />
                 </div>
             </div>
         </div>
