--- a/website/index.html
+++ b/website/index.html
@@ -100,34 +100,35 @@
                 </div>
             </div>
         </nav>
-        <div style="margin: 10px">
+        <div class="d-flex justify-content-center align-items-center">
             <img src="../assets/heartcode.png" style="width: 300px" />
-            <h1>Project Heartcode 2023</h1>
-            <p>
-                This is the website for Project Heartcode 2023. This website is
-                currently under construction.
+            <p style="font-size: 40px">
+                Bringing awareness to the issue of cyberbullying and harassment.
             </p>
         </div>
-        <div
-            id="carousel-component"
-            class="carousel slide m-4"
-            data-bs-ride="carousel"
-        >
-            <div class="carousel-inner">
-                <div
-                    class="carousel-item active rounded-pill"
-                    data-bs-interval="2000"
-                >
-                    <img src="../assets/image2.jpg" class="" alt="..." />
-                </div>
-                <div
-                    class="carousel-item active rounded-pill"
-                    data-bs-interval="2000"
-                >
-                    <img src="../assets/image3.jpg" class="" alt="..." />
+        <!-- <div class="d-flex justify-content-center">
+            <div
+                id="carousel-component"
+                class="carousel slide m-4"
+                data-bs-ride="carousel"
+            >
+                <div class="carousel-inner">
+                    <div
+                        class="carousel-item active rounded-pill"
+                        data-bs-interval="2000"
+                    >
+                        <img src="../assets/image2.jpg" class="" alt="..." />
+                    </div>
+                    <div
+                        class="carousel-item active rounded-pill"
+                        data-bs-interval="2000"
+                    >
+                        <img src="../assets/image3.jpg" class="" alt="..." />
+                    </div>
                 </div>
             </div>
-        </div>
+        </div> -->
+
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
