--- a/website/mentors.html
+++ b/website/mentors.html
@@ -53,6 +53,9 @@
                                 >Harassment</a
                             >
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="quiz.html">Quiz</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a
                                 class="nav-link dropdown-toggle"
