Added cards and homepage animation

--- a/website/index.html
+++ b/website/index.html
@@ -12,6 +12,7 @@
             crossorigin="anonymous"
         />
         <link href="styles.css" rel="stylesheet" />
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     </head>
     <body>
         <nav id="navigation-bar" class="navbar navbar-expand-lg">
@@ -103,18 +104,87 @@
                 </div>
             </div>
         </nav>
-        <p
-            style="
-                font-size: 40px;
-                text-align: left;
-                margin: 5%;
-                margin-top: 100px;
-                margin-bottom: 100px;
-            "
+        <div
+            class="d-flex justify-content-center align-items"
+            style="margin-top: 100px; margin-bottom: 0px"
         >
-            Bringing awareness to the issue of cyberbullying and harassment.
-        </p>
+            <p style="font-size: 40px; text-align: center">
+                Bringing awareness to the issue of cyberbullying and harassment.
+            </p>
+            <lottie-player
+                src="https://lottie.host/2bf26b63-45c5-40ad-ada0-6507ac20c6d6/dCMgHMwPNz.json"
+                background="transparent"
+                speed="1"
+                style="width: 300px; height: 300px"
+                loop
+                autoplay
+            ></lottie-player>
+        </div>
 
+        <div
+            class="rounded"
+            style="background-color: #f8a072; margin: 8px; padding: 80px"
+        >
+            <div class="container">
+                <div class="row">
+                    <div
+                        class="card col-12 col-md"
+                        style="width: 18rem; height: 250px; margin: 20px"
+                    >
+                        <!-- <img src="..." class="card-img-top" alt="..." /> -->
+                        <div
+                            class="card-body"
+                            style="
+                                vertical-align: middle;
+                                display: inline-block;
+                            "
+                        >
+                            <h5 class="card-title pt-4">
+                                Mental Wellness Quiz
+                            </h5>
+                            <p class="card-text">
+                                Everyone deserves a mental check-in once in a
+                                while. Take this quiz to find out how you are
+                                doing!
+                            </p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div
+                        class="card col-12 col-md"
+                        style="width: 18rem; margin: 20px; height: 250px"
+                    >
+                        <!-- <img src="..." class="card-img-top" alt="..." /> -->
+                        <div class="card-body">
+                            <h5 class="card-title pt-4">
+                                Send an Encouragement
+                            </h5>
+                            <p class="card-text">
+                                Send an encouragement to someone who needs it!
+                            </p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                    <div
+                        class="card col-12 col-md"
+                        style="width: 18rem; margin: 20px; height: 250px"
+                    >
+                        <!-- <img src="..." class="card-img-top" alt="..." /> -->
+                        <div class="card-body">
+                            <h5 class="card-title pt-4">
+                                Learn about Cyberbullying
+                            </h5>
+                            <p class="card-text">
+                                Some quick example text to build on the card
+                                title and make up the bulk of the card's
+                                content.
+                            </p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- <div class="d-flex justify-content-center">
             <div
                 id="carousel-component"
