Added animation for cards

--- a/website/index.html
+++ b/website/index.html
@@ -129,7 +129,7 @@
                 <div class="row">
                     <div
                         class="card col-12 col-md"
-                        style="width: 18rem; height: 250px; margin: 20px"
+                        style="width: 400px; height: 300px; margin: 20px"
                     >
                         <!-- <img src="..." class="card-img-top" alt="..." /> -->
                         <div
@@ -139,45 +139,72 @@
                                 display: inline-block;
                             "
                         >
-                            <h5 class="card-title pt-4">
+                            <h5 class="card-title pt-3">
                                 Mental Wellness Quiz
                             </h5>
+                            <lottie-player
+                                src="https://lottie.host/b400ece0-ee07-47d0-9443-db9466de21b3/1YdzsCcbDo.json"
+                                background="transparent"
+                                speed="1"
+                                style="width: 100px; height: 100px"
+                                loop
+                                autoplay
+                            ></lottie-player>
                             <p class="card-text">
                                 Everyone deserves a mental check-in once in a
-                                while. Take this quiz to find out how you are
-                                doing!
+                                while.
                             </p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="quiz.html" class="btn btn-primary"
+                                >Go to our Quiz</a
+                            >
                         </div>
                     </div>
                     <div
                         class="card col-12 col-md"
-                        style="width: 18rem; margin: 20px; height: 250px"
+                        style="width: 400px; margin: 20px; height: 300px"
                     >
                         <!-- <img src="..." class="card-img-top" alt="..." /> -->
                         <div class="card-body">
-                            <h5 class="card-title pt-4">
-                                Send an Encouragement
+                            <h5 class="card-title pt-3">
+                                Send an Encouragement Note
                             </h5>
+                            <lottie-player
+                                src="https://lottie.host/f8743b16-189b-4737-bb05-5e24d409f214/FRqewqYk9i.json"
+                                background="transparent"
+                                speed="1"
+                                style="width: 100px; height: 100px"
+                                loop
+                                autoplay
+                            ></lottie-player>
                             <p class="card-text">
-                                Send an encouragement to someone who needs it!
+                                Send an encouragement note to someone who needs
+                                it!
                             </p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary"
+                                >Send a message</a
+                            >
                         </div>
                     </div>
                     <div
                         class="card col-12 col-md"
-                        style="width: 18rem; margin: 20px; height: 250px"
+                        style="width: 400px; margin: 20px; height: 300px"
                     >
                         <!-- <img src="..." class="card-img-top" alt="..." /> -->
                         <div class="card-body">
-                            <h5 class="card-title pt-4">
+                            <h5 class="card-title pt-3">
                                 Learn about Cyberbullying
                             </h5>
+                            <lottie-player
+                                src="https://lottie.host/48b026ee-05fd-433c-9f03-9918c3d65a50/NlFXY13kRk.json"
+                                background="transparent"
+                                speed="1"
+                                style="width: 100px; height: 100px"
+                                loop
+                                autoplay
+                            ></lottie-player>
                             <p class="card-text">
-                                Some quick example text to build on the card
-                                title and make up the bulk of the card's
-                                content.
+                                Learn how to identify cyberbullying and lend a
+                                helping hand to victims
                             </p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
