--- a/website/quiz.html
+++ b/website/quiz.html
@@ -94,7 +94,7 @@
             </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container mt-5">
         <div class="quiz-container">
             <div class="quiz-content">
                 <form id="quizForm">
