--- a/website/harassment.html
+++ b/website/harassment.html
@@ -23,7 +23,8 @@
             display: flex;
             justify-content: center;
         }
-        .meh3{
+
+        .meh3 {
             align-items: center;
             display: flex;
             justify-content: center;
@@ -120,12 +121,13 @@
                     exposing others to unwanted or offensive content in digital groups or meetings
                 </li>
             </ul>
-            <a class="meh3" href="https://www.police.gov.sg/media-room/news/20231017_man_to_be_charged_for_involvement_in_series_of_harassment_cases">in emergency,report police</a>
+            <a class="meh3"
+                href="https://www.police.gov.sg/media-room/news/20231017_man_to_be_charged_for_involvement_in_series_of_harassment_cases">in
+                emergency,report police</a>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+                crossorigin="anonymous"></script>
+</body>
+
 </html>
