updated flaming & harassment page

--- a/website/flaming.html
+++ b/website/flaming.html
@@ -54,9 +54,6 @@
                                 >Harassment</a
                             >
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="quiz.html">Quiz</a>
-                        </li>
                         <li class="nav-item dropdown">
                             <a
                                 class="nav-link dropdown-toggle"
@@ -112,6 +109,28 @@
             <p class="container text-center">Flaming refers to the act of posting or sending offensive, inflammatory, or hostile messages online, typically in the form of comments, messages, or forum posts. This behavior is often intended to provoke others, create conflict, and escalate tensions. Flaming can occur in various online platforms, including social media, forums, chat rooms, and online gaming communities.</p>
 
         </div>
+        <h2 style="text-align: center; margin:40px; font-weight: bold;">What are the consquences of flamming?</h2>
+        <div class="d-flex justify-content-center items-align">   
+            <ol class="text-center">
+                <li>Damage to Relationships: Flaming can harm relationships between individuals or within online communities, leading to animosity and a hostile environment.</li>
+                <li>Reputation Damage: Engaging in flaming can damage the reputation of the person responsible, both online and offline.</li>
+                <li>Account Suspension or Ban: Many online platforms have rules against flaming, and users who violate these rules may face consequences such as account suspension or banning.</li>
+                <li>Legal Consequences: In extreme cases, flaming may lead to legal consequences, especially if the messages involve threats, harassment, or other forms of illegal activity.</li>
+            </ol>     
+            <lottie-player src="https://lottie.host/2cd425ff-5886-4935-9896-fca984ac9c47/KUrOGxPNlf.json" background="transparent" speed="1" style="width: 400px; height:
+                px;" loop autoplay></lottie-player></div>
+        
+        <h4 style="text-align:center; margin: 40px; font-size: x-large; font-weight: bold;">What are the solutions to it?</h4>
+        <div class="d-flex justify-content-center items-align">
+    <lottie-player src="https://lottie.host/93107f53-acd5-4107-bb7d-d8c86040b30e/LbacHVfiFh.json" background="transparent" speed="1" style="width: 400px; height:
+    px;" loop autoplay></lottie-player>
+    <ol class="text-center">
+        <li>Moderation: Employ active moderation to monitor and control content on your website. Have a team or automated tools in place to identify and address inflammatory comments promptly.</li>
+        <li>Community Guidelines: Clearly define and communicate community guidelines. Establish rules for respectful communication and consequences for violating these rules.</li>
+        <li>User Reporting: Implement a system that allows users to report inappropriate behavior. Encourage users to report instances of flaming, so they can be addressed quickly.</li>
+        <li>User Education: Provide information and resources to educate users on the importance of respectful online communication. Encourage empathy and understanding.</li>
+        <li>Anonymous Posting Policies: Consider limiting or moderating anonymous posting. People are often more civil when their identities are known.</li>
+    </ol>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
