--- a/website/harassment.html
+++ b/website/harassment.html
@@ -85,10 +85,8 @@
             </div>
         </div>
     </nav>
-    <h1  class="fw-bold" >HARASSMENT</h1>
-    <h2>Harassment covers a wide range of behaviors of offensive nature. It is commonly understood as behavior that
-        demeans, humiliates, and intimidates a person
-        <h2>
+    <h1 style="text-align:center; margin: 20px; font-size: xx-large; font-weight: bold;">What is harrasment?</h1>
+    <h2>Harassment refers to any unwanted behavior, actions, or conduct that causes discomfort, fear, or distress to another person. It can manifest in various forms and occur in different settings, including the workplace, schools, public spaces, or online. Harassment is generally characterized by a repeated and intentional pattern of behavior, creating a hostile or intimidating environment for the victim.<h2>
             <br>
             <p class="meh">What is online harassment?
                 Harassment in the context of cyberbullying refers to the use of electronic communication, such as the
