--- a/website/flaming.html
+++ b/website/flaming.html
@@ -14,7 +14,7 @@
         <link href="styles.css" rel="stylesheet" />
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     </head>
-    <body>
+    <br>
         <nav id="navigation-bar" class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand text-white" href="#"
@@ -130,8 +130,16 @@
         <li>User Reporting: Implement a system that allows users to report inappropriate behavior. Encourage users to report instances of flaming, so they can be addressed quickly.</li>
         <li>User Education: Provide information and resources to educate users on the importance of respectful online communication. Encourage empathy and understanding.</li>
         <li>Anonymous Posting Policies: Consider limiting or moderating anonymous posting. People are often more civil when their identities are known.</li>
+        
     </ol>
-
+    </div>
+    <br></br>
+    <div class="container">
+        <div class="d-flex justify-content-center">
+            <iframe width="560" height="400" class="d-block" src="https://www.youtube.com/embed/Hvo6Op8oukI?si=rGUOjTP6EyciQnrZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+        </div>
+    </div>
+    
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
