--- a/website/flaming.html
+++ b/website/flaming.html
@@ -55,7 +55,7 @@
                             >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="quiz.html">Quiz</a>
+                            <a class="nav-link active" href="quiz.html">Others</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a
