--- a/website/harassment.html
+++ b/website/harassment.html
@@ -52,7 +52,7 @@
                         <a class="nav-link active" href="harassment.html">Harassment</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="quiz.html">Quiz</a>
+                        <a class="nav-link active" href="quiz.html">Others</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
