--- a/website/harassment.html
+++ b/website/harassment.html
@@ -44,93 +44,94 @@
 </head>
 
 <body>
-    <nav id="navigation-bar" class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <a class="navbar-brand text-white" href="index.html">Project Heartcode</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="flaming.html">Flaming</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="harassment.html">Harassment</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="quiz.html">Quiz</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            About Us
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a class="dropdown-item" href="mentee1.html">Cayden</a>
+
+            <nav id="navigation-bar" class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand text-white" href="index.html">Project Heartcode</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
-                            <li>
-                                <a class="dropdown-item" href="mentee2.html">Zi Rong</a>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="flaming.html">Flaming</a>
                             </li>
-                            <li>
-                                <hr class="dropdown-divider" />
+                            <li class="nav-item">
+                                <a class="nav-link active" href="harassment.html">Harassment</a>
                             </li>
-                            <li>
-                                <a class="dropdown-item" href="mentors.html">About the mentors</a>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="quiz.html">Quiz</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    About Us
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a class="dropdown-item" href="mentee1.html">Cayden</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="mentee2.html">Zi Rong</a>
+                                    </li>
+                                    <li>
+                                        <hr class="dropdown-divider" />
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="mentors.html">About the mentors</a>
+                                    </li>
+                                </ul>
                             </li>
                         </ul>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                    <button class="btn btn-outline text-white" type="submit">
-                        Search
-                    </button>
-                </form>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                            <button class="btn btn-outline text-white" type="submit">
+                    
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+            <h1 class="fw-bolder text-bg-info p-3 mb-2 bg-danger text-white">HARASSMENT</h1>
+            <h2 class="fw-bold text-bg-info p-3 mb-2 bg-body text-dark">Harassment covers a wide range of behaviors of offensive nature. It is commonly understood as behavior that
+                demeans, humiliates, and intimidates a person
+                <h2>       
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="haraassment.webp" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="download.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="online_harassment_of_women_journalists.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-        </div>
-    </nav>
-    <h1 class="fw-bold text-bg-info p-3 mb-2 bg-danger text-white">HARASSMENT</h1>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="haraassment.webp" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="download.jpeg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="online_harassment_of_women_journalists.png" class="d-block w-100" alt="...">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-    <h2>Harassment covers a wide range of behaviors of offensive nature. It is commonly understood as behavior that
-        demeans, humiliates, and intimidates a person
-        <h2>
             <h1 style="text-align:center; margin: 20px; font-size: xx-large; font-weight: bold;">What is harrasment?
             </h1>
             <h2>Harassment refers to any unwanted behavior, actions, or conduct that causes discomfort, fear, or
