--- a/website/harassment.html
+++ b/website/harassment.html
@@ -67,6 +67,9 @@
                             <li class="nav-item">
                                 <a class="nav-link active" href="quiz.html">Quiz</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="sharekindwords.html">Share Kind Words</a>
+                            </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
