--- a/website/mentors.html
+++ b/website/mentors.html
@@ -54,7 +54,10 @@
                             >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="quiz.html">Others</a>
+                            <a class="nav-link active" href="quiz.html">Quiz</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="sharekindwords.html">Share Kind Words</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a
