--- a/website/quiz.html
+++ b/website/quiz.html
@@ -22,6 +22,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            margin-bottom: 5%;
         }
 
         .box {
@@ -75,7 +76,10 @@
                         <a class="nav-link active" href="harassment.html">Harassment</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="quiz.html">Others</a>
+                        <a class="nav-link active" href="quiz.html">Quiz</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="sharekindwords.html">Share Kind Words</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
@@ -203,19 +207,6 @@
                     <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
-        </div>
-    </div>
-    <hr>
-    <div class="container">
-        <div class="box">
-            <form class="mt-4">
-                <div class="mb-3">
-                    <h1 class="text-center">Share Your Kind Words</h1>
-                    <p>Send an encouragement note to someone who needs it!</p>
-                    <textarea class="form-control" id="kindWords" rows="3"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
         </div>
     </div>
 
