--- a/website/sharekindwords.html
+++ b/website/sharekindwords.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="../assets/heartcode.png" />
     <style>
         .container {
+            margin-top: 5%;
             background-color: #F9F7F3;
             display: flex;
             justify-content: center;
@@ -24,6 +25,7 @@
             align-items: center;
             padding: 20px;
             width: 100%;
+            height: 500px;
         }
     </style>
 </head>
