--- a/website/harassment.html
+++ b/website/harassment.html
@@ -30,6 +30,13 @@
             justify-content: center;
         }
 
+        .meh4{
+            margin-left: 30%;
+            margin-right: 30%;
+            border-radius: 20%;
+            text-align: center;
+        }
+
         #carouselExampleIndicators {
             width: 70%;
             margin: auto;
@@ -97,7 +104,9 @@
                     </div>
                 </div>
             </nav>
+            <div class="meh4">
             <h1 class="fw-bolder text-bg-info p-3 mb-2 bg-danger text-white">HARASSMENT</h1>
+        </div>
             <h2 class="fw-bold text-bg-info p-3 mb-2 bg-body text-dark">Harassment covers a wide range of behaviors of offensive nature. It is commonly understood as behavior that
                 demeans, humiliates, and intimidates a person
                 <h2>       
@@ -182,7 +191,7 @@
                     </ul>
                     <a class="meh3"
                         href="https://www.police.gov.sg/media-room/news/20231017_man_to_be_charged_for_involvement_in_series_of_harassment_cases">in
-                        emergency,report police</a>
+                        if emergency help is needed click this!</a>
 
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
                         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
